// Vitest Snapshot v1

exports[`serializeDocument > serializes documents with collection references 1`] = `
{
  "data": {
    "from": "example@email.com",
    "root": {
      "_queryOptions": {
        "collectionId": "email",
        "endAt": undefined,
        "fieldFilters": [],
        "fieldOrders": [],
        "limit": undefined,
        "limitType": undefined,
        "offset": undefined,
        "parentPath": {
          "segments": [],
        },
        "startAt": undefined,
      },
    },
    "threads": [
      {
        "_queryOptions": {
          "collectionId": "threads",
          "endAt": undefined,
          "fieldFilters": [],
          "fieldOrders": [],
          "limit": undefined,
          "limitType": undefined,
          "offset": undefined,
          "parentPath": {
            "segments": [
              "email",
              "1",
            ],
          },
          "startAt": undefined,
        },
      },
    ],
  },
  "path": "email/1",
  "queries": [
    "root",
    "threads.0",
  ],
}
`;

exports[`serializeDocument > serializes documents with document references 1`] = `
{
  "data": {
    "from": "example@email.com",
    "parent": {
      "_path": {
        "segments": [
          "email",
          "parent",
        ],
      },
    },
    "references": [
      {
        "_path": {
          "segments": [
            "email",
            "parent",
          ],
        },
      },
    ],
  },
  "documents": [
    "parent",
    "references.0",
  ],
  "path": "email/1",
}
`;

exports[`serializeDocument > serializes documents with geopoints 1`] = `
{
  "data": {
    "from": "example@email.com",
    "location": {
      "_latitude": 10,
      "_longitude": 20,
    },
    "tags": {
      "list": [
        {
          "_latitude": 10,
          "_longitude": 20,
        },
      ],
      "location": {
        "_latitude": 10,
        "_longitude": 20,
      },
    },
  },
  "geopoints": [
    "location",
    "tags.location",
    "tags.list.0",
  ],
  "path": "email/1",
}
`;

exports[`serializeDocument > serializes documents with queries 1`] = `
{
  "data": {
    "from": "example@email.com",
    "threads": {
      "_queryOptions": {
        "collectionId": "threads",
        "endAt": undefined,
        "fieldFilters": [
          {
            "field": {
              "segments": [
                "field",
              ],
            },
            "op": "ARRAY_CONTAINS",
            "value": [
              1,
              2,
            ],
          },
        ],
        "fieldOrders": [
          {
            "direction": "DESCENDING",
            "field": {
              "segments": [
                "date",
              ],
            },
          },
        ],
        "limit": undefined,
        "limitType": undefined,
        "offset": undefined,
        "parentPath": {
          "segments": [
            "email",
            "1",
          ],
        },
        "startAt": undefined,
      },
    },
  },
  "path": "email/1",
  "queries": [
    "threads",
  ],
}
`;

exports[`serializeDocument > serializes documents with timestamps 1`] = `
{
  "data": {
    "date": {
      "_nanoseconds": 0,
      "_seconds": 1640995200,
    },
    "from": "example@email.com",
    "tags": {
      "created": {
        "_nanoseconds": 0,
        "_seconds": 1640995200,
      },
      "dates": [
        {
          "_nanoseconds": 0,
          "_seconds": 1640995200,
        },
      ],
    },
  },
  "path": "email/1",
  "timestamps": [
    "date",
    "tags.created",
    "tags.dates.0",
  ],
}
`;

exports[`serializeDocument > serializes plain documents 1`] = `
{
  "data": {
    "attachments": 2,
    "content": "Dear John,

Hello world!",
    "from": "example@email.com",
    "tags": {
      "important": true,
      "work": true,
    },
    "to": [
      "recipient1@email.com",
      "recipient2@email.com",
    ],
  },
  "path": "email/1",
}
`;
